# ark-3d-tictactoe-agent

./: .gitignore  2d.py  3d.py  Pipfile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  test_negamax.py
3d/: agent.py  agent_dqn.py  agent_human.py  agent_random.py  main.py  memory.py  train_dqn.py  utils.py
test/: memory.py  test.py
